--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ str_next: Next
 str_prev: Prev
 str_read_more: Read more...
 str_search: Search
-str_recent_posts: Recent posts
+str_recent_posts: Authors
 str_show_all_posts: Show all posts
 
 #
