--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python: HISAT genotype",
             "type": "python",
             "request": "launch",
-            "cwd" : "/home/christopher/Documents/scratch-folder/HG_issue_139",
+            "cwd" : "/home/christopher/Documents/hisatgenotype-working/hg_v1.2_testing",
             //"cwd": "/home/christopher/Documents/hisatgenotype-working", //tmp-RBG",
             "program": "${file}",
             "args": [
@@ -17,10 +17,10 @@
                 //"--assembly", "-f",
                 "--base", "hla",
                 "--locus-list", "A",
-                //"--assembly",
-                //"--debug", "pair,full"
-                "-1", "ILMN/NA12892.extracted.1.fq.gz",
-                "-2", "ILMN/NA12892.extracted.2.fq.gz"
+                "--assembly",
+                "--debug", "pair"
+                //"-1", "ILMN/NA12892.extracted.1.fq.gz",
+                //"-2", "ILMN/NA12892.extracted.2.fq.gz"
             ],
             "env" : {
                 "PYTHONPATH": "~/Documents/hisatgenotype-working/hisat2-devel/hisatgenotype_modules:$PYTHONPATH"
