--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,17 +8,17 @@
             "name": "Python: HISAT genotype",
             "type": "python",
             "request": "launch",
-            "cwd" : "/home/christopher/Documents/hisatgenotype-working/hg_v1.2_testing",
+            "cwd" : "/home/christopher/databases/hisat-bases/tmp_hg_db",
             //"cwd": "/home/christopher/Documents/hisatgenotype-working", //tmp-RBG",
             "program": "${file}",
             "args": [
                 //"--gene-list", "ABO"
                 //"--read-dir", "fastq_files", "--out-dir", "extracted_fastq"
                 //"--assembly", "-f",
-                "--base", "hla",
-                "--locus-list", "A",
-                "--assembly",
-                "--debug", "pair"
+                "--base", "hla"
+                //"--locus-list", "A",
+                //"--assembly",
+                //"--debug", "pair"
                 //"-1", "ILMN/NA12892.extracted.1.fq.gz",
                 //"-2", "ILMN/NA12892.extracted.2.fq.gz"
             ],
