--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,19 +8,21 @@
             "name": "Python: HISAT genotype",
             "type": "python",
             "request": "launch",
-            "cwd" : "/home/christopher/databases/hisat-bases/tmp_hg_db",
+            "cwd" : "/home/christopher/Documents/hisatgenotype-working/hg_v1.2_testing",
             //"cwd": "/home/christopher/Documents/hisatgenotype-working", //tmp-RBG",
             "program": "${file}",
             "args": [
                 //"--gene-list", "ABO"
                 //"--read-dir", "fastq_files", "--out-dir", "extracted_fastq"
                 //"--assembly", "-f",
-                "--base", "hla"
-                //"--locus-list", "A",
-                //"--assembly",
+                "--base", "hla",
+                "--locus-list", "DRB1",
+                "--pass-extract",
+                "--fasta",
+                "--assembly",
                 //"--debug", "pair"
-                //"-1", "ILMN/NA12892.extracted.1.fq.gz",
-                //"-2", "ILMN/NA12892.extracted.2.fq.gz"
+                "-1", "namecorr_hla_input_1.fa",
+                "-2", "namecorr_hla_input_2.fa"
             ],
             "env" : {
                 "PYTHONPATH": "~/Documents/hisatgenotype-working/hisat2-devel/hisatgenotype_modules:$PYTHONPATH"
