--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "editor.fontSize": 14,
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
-    "python.pythonPath": "/usr/bin/python",
+    "python.pythonPath": "/home/christopher/.local/anaconda3/envs/python2/bin/python",
     "python.autoComplete.extraPaths": [
         "/home/christopher/Documents/hisatgenotype-working/hisat2-devel/hisatgenotype_modules",
         "/opt/rh/devtoolset-4/root/usr/lib64/python2.7/site-packages",
