--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ language: en
 icons:
   rss: true
   email:
-  github: ttskch
+  github:
   bitbucket:
-  twitter: ttskch
+  twitter:
   facebook:
   google_plus:
   tumblr:
