Update hisat2 submodule branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "hisat2"]
 	path = hisat2
 	url = https://github.com/DaehwanKimLab/hisat2.git
-	branch = hisat2-nohisatgenotype
+	branch = master
